--- a/AUTHORS
+++ b/AUTHORS
@@ -7,3 +7,4 @@ Jennifer Huang <jhuang1012bn@yahoo.com>
 jvpupcat <jvpupcat@users.noreply.github.com>
 jvpupcat <vuong.joann@yahoo.com>
 MissTipo <dorine.a.tipo@gmail.com>
+Adewole <phatboislym@protonmail.com>
