fix: update AUTHORS file

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,10 +1,11 @@
 # This file lists all individuals having contributed content to the repository.
 # For how it is generated, see `hack/generate-authors.sh`.
 
+Adewole <phatboislym@protonmail.com>
 Alexa Orrico <alexaorrico@gmail.com>
 alexaorrico <alexaorrico@gmail.com>
+Dorine Tipo <dorine.a.tipo@gmail.com>
 Jennifer Huang <jhuang1012bn@yahoo.com>
 jvpupcat <jvpupcat@users.noreply.github.com>
 jvpupcat <vuong.joann@yahoo.com>
 MissTipo <dorine.a.tipo@gmail.com>
-Adewole <phatboislym@protonmail.com>
