--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,7 @@
 # This file lists all individuals having contributed content to the repository.
 # For how it is generated, see `hack/generate-authors.sh`.
 
+Adewole Conde <101429938+phatboislym@users.noreply.github.com>
 Adewole <phatboislym@protonmail.com>
 Alexa Orrico <alexaorrico@gmail.com>
 alexaorrico <alexaorrico@gmail.com>
